# tribopy

./: DryAndMixedLubrication.py  FundamentalConcepts.py  LICENSE  LiquidProperties.py  LubricantCharacterization.py  LubricantComposition.py  LubricationConformalContacts.py  LubricationNonConformalContacts.py  MeasuringFrictionAndWear.py  NonConformalSolidContact.py  README.md  SolidMaterials.py  SurfaceRoughness.py  Wear.py  __init__.py  app.py  example.ipynb  main.py  pyproject.toml
